@@ -1,7 +1,10 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.492 2009-04-30 19:49:02 guru Exp $
+	$Id: ChangeLog,v 1.493 2009-05-01 17:35:58 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2009-05-01	pwessel
+	* pslib.c:		Check if input arg eps == NULL before using this pointer
+	
 2009-04-30	pwessel
 	* gmt_map.c:		Incorrectly used central longitude to set default midpoint for 3-D maps
 				using the -E...+ mechanism when data were not geographic.
